Add static files

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <title>{{ name }}'s Watchlist</title>
+    <link rel="icon" href="{{ url_for('static', filename='images/fooo.png') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
+    <ul class="movie-list">
 </head>
 <body>
-    <h2>{{ name }}'s Watchlist</h2>
+    <h2>
+    <img alt="Avatar" src="{{ url_for('static', filename='images/foo.png') }}">
+    {{ name }}'s Watchlist
+    </h2>
     {# 使用 length 过滤器获取 movies 变量的长度 #}
     <p>{{ movies|length }} Titles</p>
     <ul>
@@ -13,8 +19,13 @@
         <li>{{ movie.title }} - {{ movie.year }}</li>  {# 等同于 movie['title'] #}
         {% endfor %}  {# 使用 endfor 标签结束 for 语句 #}
     </ul>
+
+    <footer>
+        <img alt="Walking Totoro" src="{{ url_for('static', filename='images/fooo.png') }}">
+    </footer>
     <footer>
         <small>&copy; 2018 <a href="http://helloflask.com/book/3">HelloFlask</a></small>
     </footer>
 </body>
 </html>
+
