--- a/templates/index.html
+++ b/templates/index.html
@@ -8,17 +8,23 @@
     <ul class="movie-list">
 </head>
 <body>
-    <h2>
-    <img alt="Avatar" src="{{ url_for('static', filename='images/foo.png') }}">
-    {{ name }}'s Watchlist
-    </h2>
+
     {# 使用 length 过滤器获取 movies 变量的长度 #}
+    {% extends 'base.html' %}
+
+    {% block content %}
     <p>{{ movies|length }} Titles</p>
     <ul>
         {% for movie in movies %}  {# 迭代 movies 变量 #}
-        <li>{{ movie.title }} - {{ movie.year }}</li>  {# 等同于 movie['title'] #}
+        <li>{{ movie.title }} - {{ movie.year }}
+            <span class="float-right">
+            <a class="imdb" href="https://www.imdb.com/find?q={{ movie.title }}" target="_blank" title="Find this movie on IMDb">IMDb</a>
+            </span>
+        </li>
         {% endfor %}  {# 使用 endfor 标签结束 for 语句 #}
     </ul>
+    <img alt="Walking Totoro" class="totoro" src="{{ url_for('static', filename='images/foo.png') }}" title="to~to~ro~">
+    {% endblock %}
 
     <footer>
         <img alt="Walking Totoro" src="{{ url_for('static', filename='images/fooo.png') }}">
