--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,12 @@
     {% endblock %}
 </head>
 <body>
+
+    <!-- 插入到页面标题上方 -->
+        {% for message in get_flashed_messages() %}
+        <div class="alert">{{ message }}</div>
+    {% endfor %}
+
     <h2>
         <img alt="Avatar" class="avatar" src="{{ url_for('static', filename='images/foo.png') }}">
         {{ user.name }}'s Watchlist
