--- a/templates/index.html
+++ b/templates/index.html
@@ -1,50 +1,28 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>{{ user.name }}'s Watchlist</title>
-    <link rel="icon" href="{{ url_for('static', filename='images/fo.jpg') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
-</head>
-<body>
-<h2>
-    <img alt="Avatar" src="{{ url_for('static', filename='images/foo.png') }}">
-    {{ user.name }}'s Watchlist
-</h2>
-
 {% extends 'base.html' %}
-{% block content %}
-{#继承基模板的主页模板#}
-    {# 使用 length 过滤器获取 movies 变量的长度 #}
-    <p>{{ movies|length }} Titles</p>
-    {% if current_user.is_authenticated %}
-    <form method="post">{# 添加创建新条目表单 #}
-        Name <input type="text" name="title" autocomplete="off" required>
-        Year <input type="text" name="year" autocomplete="off" required>
-        <input class="btn" type="submit" name="submit" value="Add">
-    </form>
-    {% endif %}
-    <ul class="movie-list">
-        {% for movie in movies %}  {# 迭代 movies 变量 #}
-        <li>{{ movie.title }} - {{ movie.year }}
-            <span class="float-right">
-            {% if current_user.is_authenticated %}
-                 <a class="btn" href="{{ url_for('edit', movie_id=movie.id) }}">Edit</a>
-                <form class="inline-form" method="post" action="{{ url_for('delete', movie_id=movie.id) }}">
-                    <input class="btn" type="submit" name="delete" value="Delete" onclick="return confirm('Are you sure?')">
-                </form>
-            {% endif %}
-                <a class="imdb" href="https://www.imdb.com/find?q={{ movie.title }}" target="_blank" title="Find this movie on IMDb">IMDb</a>
-            </span>
-        </li>  {# 等同于 movie['title'] #}
-        {% endfor %}  {# 使用 endfor 标签结束 for 语句 #}
-    </ul>
 
+{% block content %}
+<p>{{ movies|length }} Titles</p>
+{% if current_user.is_authenticated %}
+<form method="post">
+    Name <input type="text" name="title" autocomplete="off" required>
+    Year <input type="text" name="year" autocomplete="off" required>
+    <input class="btn" type="submit" name="submit" value="Add">
+</form>
+{% endif %}
+<ul class="movie-list">
+    {% for movie in movies %}
+    <li>{{ movie.title }} - {{ movie.year }}
+        <span class="float-right">
+            {% if current_user.is_authenticated %}
+            <a class="btn" href="{{ url_for('edit', movie_id=movie.id) }}">Edit</a>
+            <form class="inline-form" method="post" action="{{ url_for('delete', movie_id=movie.id) }}">
+                <input class="btn" type="submit" name="delete" value="Delete" onclick="return confirm('Are you sure?')">
+            </form>
+            {% endif %}
+            <a class="imdb" href="https://www.imdb.com/find?q={{ movie.title }}" target="_blank" title="Find this movie on IMDb">IMDb</a>
+        </span>
+    </li>
+    {% endfor %}
+</ul>
 <img alt="Walking Totoro" class="totoro" src="{{ url_for('static', filename='images/fooo.png') }}" title="to~to~ro~">
 {% endblock %}
-
-    <footer>
-        <small>&copy; 2018 <a href="http://helloflask.com/book/3">HelloFlask</a></small>
-    </footer>
-</body>
-</html>
